--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,41 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
+    "outDir": "./dist/",
+    "moduleResolution": "node",
     "noImplicitAny": true,
+    "removeComments": true,
     "preserveConstEnums": true,
     "sourceMap": true,
-    "target": "es6",
-    "downlevelIteration": true,
-    "lib": ["es6"],
-    "module": "CommonJS",
-    "outDir": "dist",
-    "experimentalDecorators": true,
+    "module": "commonjs",
+    "target": "es2021",
+    "allowJs": true,
+    "esModuleInterop": true,
     "emitDecoratorMetadata": true,
-    "moduleResolution": "Node",
-    "esModuleInterop": true
-  }
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "lib": [
+      "es7",
+      "es2015",
+    ],
+    "paths": {
+      "Components/*": [
+        "src/components/*"
+      ],
+      "Entity/*": [
+        "src/models/*"
+      ],
+      "*": [
+        "types/*"
+      ]
+    }
+  },
+    "include": [
+      "./src/**/*",
+      "public"
+    ],
+  "exclude": [
+    "../node_modules",
+    "**/*.spec.ts"
+  ]
 }
